deploy: 956888a8a91dc617c2d41faea8748325fa76c73d

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <p>Let's start with some important points:</p>
 <ul>
 <li>
-<p><strong>This is a <a href="https://www.swyx.io/learn-in-public">learn in public</a> project</strong>, rather, an experiment. That is, there is some chance that there might be mistakes. For feedback, feel free to contact <code>riveazero at gmail dot com</code>.</p>
+<p><strong>This is a <a href="https://www.swyx.io/learn-in-public">learn in public</a> project</strong>, rather, an experiment. That is, there is some chance that there might be mistakes. For feedback, feel free to contact <code>edae dot space at gmail dot com</code>.</p>
 </li>
 <li>
 <p>The best way to learn something is to talk/write about it, or teach it to someone. This is the crux of the project: this collection consists mostly of very short notes <strong>written in an informal tone to get familiar with the concepts</strong>.</p>
