--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href=/bite-sized-math-for-cs/public/apple-touch-icon.png>
-    <link rel="icon" type="image/png" sizes="32x32" href=/bite-sized-math-for-cs/public/favicon-32x32.png>
-    <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
-    <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
-    <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href=public/apple-touch-icon.png>
+    <link rel="icon" type="image/png" sizes="32x32" href=public/favicon-32x32.png>
+    <link rel="icon" type="image/png" sizes="16x16" href=public/favicon-16x16.png>
+    <link rel="manifest" href=public/site.webmanifest>
+    <link rel="stylesheet" href=public/css/index.css>
+    <link href=public/css/prism-material-light.css rel="stylesheet">
     <title>Bite-Sized Mathematics for Computer Science</title>
   </head>
   <body>
@@ -209,7 +209,7 @@ Again, the point is to be as short as possible, only to explore concepts, so it 
 </ul>
 <hr>
 <p>&quot;<em>Anybody with enough curiosity ought to be able to explore a field</em>.<sup>*</sup>&quot; - Eric Grimson, Chancellor for Academic Advancement at MIT, Professor of Computer Science</p>
-<p><sup>*</sup><span style="font-size: smaller;">From <a href="https://chalk-radio.simplecast.com/episodes/opening-computer-science-to-everyone-with-chancellor-eric-grimson-Bpcx1tMI">MIT's Chalk Radio</a></span>.</p>
+<p><sup>*</sup><span style="font-size: smaller;">From <a href="https://www.youtube.com/watch?v=Ad4HmoAkgBo">MIT's Chalk Radio</a></span>.</p>
 
       <hr class="ending">
           <ul class="links-nextprev"><li><a href="/bite-sized-math-for-cs/prerequisites-and-resources/">next</a></li>
