--- a/unit-01-proofs/introduction-to-proofs/index.html
+++ b/unit-01-proofs/introduction-to-proofs/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href=/bite-sized-math-for-cs/public/apple-touch-icon.png>
-    <link rel="icon" type="image/png" sizes="32x32" href=/bite-sized-math-for-cs/public/favicon-32x32.png>
-    <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
-    <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
-    <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href=public/apple-touch-icon.png>
+    <link rel="icon" type="image/png" sizes="32x32" href=public/favicon-32x32.png>
+    <link rel="icon" type="image/png" sizes="16x16" href=public/favicon-16x16.png>
+    <link rel="manifest" href=public/site.webmanifest>
+    <link rel="stylesheet" href=public/css/index.css>
+    <link href=public/css/prism-material-light.css rel="stylesheet">
     <title>Introduction to Proofs</title>
   </head>
   <body>
