--- a/unit-03-counting/pigeonhole-principle-inclusion-exclusion/index.html
+++ b/unit-03-counting/pigeonhole-principle-inclusion-exclusion/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href=public/apple-touch-icon.png>
-    <link rel="icon" type="image/png" sizes="32x32" href=public/favicon-32x32.png>
-    <link rel="icon" type="image/png" sizes="16x16" href=public/favicon-16x16.png>
-    <link rel="manifest" href=public/site.webmanifest>
-    <link rel="stylesheet" href=public/css/index.css>
-    <link href=public/css/prism-material-light.css rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href=/public/apple-touch-icon.png>
+    <link rel="icon" type="image/png" sizes="32x32" href=/public/favicon-32x32.png>
+    <link rel="icon" type="image/png" sizes="16x16" href=/public/favicon-16x16.png>
+    <link rel="manifest" href=/public/site.webmanifest>
+    <link rel="stylesheet" href=/public/css/index.css>
+    <link href=/public/css/prism-material-light.css rel="stylesheet">
     <title>Pigeonhole Principle, Inclusion-Exclusion</title>
   </head>
   <body>
     <header class="title-header">
-      <a href=/bite-sized-math-for-cs/>
+      <a href=/>
         <h1 class="title">Bite-Sized Mathematics for Computer Science</h1></a>
         <h2 class="title-2">Notes on <a href="https://openlearninglibrary.mit.edu/courses/course-v1:OCW+6.042J+2T2019/course/">MIT's 6.042J</a></h2>
       <span class="author-name">Eda Eren</span>
@@ -28,126 +28,126 @@
       <details>
         <summary>Table of Contents</summary>
           <p>
-            <a href="/bite-sized-math-for-cs/">Introduction</a>
+            <a href="/">Introduction</a>
           </p>
           <p>
-            <a href="/bite-sized-math-for-cs/prerequisites-and-resources/">Prerequisites &amp; Resources</a>
+            <a href="/prerequisites-and-resources/">Prerequisites &amp; Resources</a>
           </p>
         <div>
           <p class="unit">Unit 1: Proofs</p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/introduction-to-proofs/">00. Introduction to Proofs</a>
+              <a href="/unit-01-proofs/introduction-to-proofs/">00. Introduction to Proofs</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/two-proof-methods/">01. (Two) Proof Methods</a>
+              <a href="/unit-01-proofs/two-proof-methods/">01. (Two) Proof Methods</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/the-well-ordering-principle/">02. The Well Ordering Principle</a>
+              <a href="/unit-01-proofs/the-well-ordering-principle/">02. The Well Ordering Principle</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/logic-and-propositions/">03. Logic &amp; Propositions</a>
+              <a href="/unit-01-proofs/logic-and-propositions/">03. Logic &amp; Propositions</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/quantifiers-and-predicate-logic/">04. Quantifiers and Predicate Logic</a>
+              <a href="/unit-01-proofs/quantifiers-and-predicate-logic/">04. Quantifiers and Predicate Logic</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/sets/">05. Sets</a>
+              <a href="/unit-01-proofs/sets/">05. Sets</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/binary-relations/">06. Binary Relations</a>
+              <a href="/unit-01-proofs/binary-relations/">06. Binary Relations</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/induction/">07. Induction</a>
+              <a href="/unit-01-proofs/induction/">07. Induction</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/state-machines-invariants/">08. State Machines — Invariants</a>
+              <a href="/unit-01-proofs/state-machines-invariants/">08. State Machines — Invariants</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/recursive-definitions/">09. Recursive Definitions</a>
+              <a href="/unit-01-proofs/recursive-definitions/">09. Recursive Definitions</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-01-proofs/infinite-sets/">10. Infinite Sets</a>
+              <a href="/unit-01-proofs/infinite-sets/">10. Infinite Sets</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 2: Structures</p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/gcds/">11. GCDs</a>
+              <a href="/unit-02-structures/gcds/">11. GCDs</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/congruences/">12. Congruences</a>
+              <a href="/unit-02-structures/congruences/">12. Congruences</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/eulers-theorem/">13. Euler&#39;s Theorem</a>
+              <a href="/unit-02-structures/eulers-theorem/">13. Euler&#39;s Theorem</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/rsa-encryption/">14. RSA Encryption</a>
+              <a href="/unit-02-structures/rsa-encryption/">14. RSA Encryption</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/digraphs-walks-and-paths/">15. Digraphs: Walks and Paths</a>
+              <a href="/unit-02-structures/digraphs-walks-and-paths/">15. Digraphs: Walks and Paths</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/directed-acyclic-graphs/">16. Directed Acyclic Graphs</a>
+              <a href="/unit-02-structures/directed-acyclic-graphs/">16. Directed Acyclic Graphs</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/partial-orders-and-equivalence/">17. Partial Orders and Equivalence</a>
+              <a href="/unit-02-structures/partial-orders-and-equivalence/">17. Partial Orders and Equivalence</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/degrees-and-isomorphism/">18. Degrees &amp; Isomorphism</a>
+              <a href="/unit-02-structures/degrees-and-isomorphism/">18. Degrees &amp; Isomorphism</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/coloring-and-connectivity/">19. Coloring &amp; Connectivity</a>
+              <a href="/unit-02-structures/coloring-and-connectivity/">19. Coloring &amp; Connectivity</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/trees/">20. Trees</a>
+              <a href="/unit-02-structures/trees/">20. Trees</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-02-structures/stable-matching/">21. Stable Matching</a>
+              <a href="/unit-02-structures/stable-matching/">21. Stable Matching</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 3: Counting</p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-03-counting/sums-and-products/">22. Sums &amp; Products</a>
+              <a href="/unit-03-counting/sums-and-products/">22. Sums &amp; Products</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-03-counting/asymptotics/">23. Asymptotics</a>
+              <a href="/unit-03-counting/asymptotics/">23. Asymptotics</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-03-counting/counting-with-bijections/">24. Counting with Bijections</a>
+              <a href="/unit-03-counting/counting-with-bijections/">24. Counting with Bijections</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-03-counting/repetitions-and-binomial-theorem/">25. Repetitions &amp; Binomial Theorem</a>
+              <a href="/unit-03-counting/repetitions-and-binomial-theorem/">25. Repetitions &amp; Binomial Theorem</a>
             </p>
             <p class="active-page-link">
-              <a href="/bite-sized-math-for-cs/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">26. Pigeonhole Principle, Inclusion-Exclusion</a>
+              <a href="/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">26. Pigeonhole Principle, Inclusion-Exclusion</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 4: Probability</p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/intro-to-discrete-probability/">27. Intro to Discrete Probability</a>
+              <a href="/unit-04-probability/intro-to-discrete-probability/">27. Intro to Discrete Probability</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/conditional-probability/">28. Conditional Probability</a>
+              <a href="/unit-04-probability/conditional-probability/">28. Conditional Probability</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/independence-and-causality/">29. Independence &amp; Causality</a>
+              <a href="/unit-04-probability/independence-and-causality/">29. Independence &amp; Causality</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/random-variables-density-functions/">30. Random Variables, Density Functions</a>
+              <a href="/unit-04-probability/random-variables-density-functions/">30. Random Variables, Density Functions</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/expectation/">31. Expectation</a>
+              <a href="/unit-04-probability/expectation/">31. Expectation</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/deviation-markov-and-chebyshev-bounds/">32. Deviation: Markov &amp; Chebyshev Bounds</a>
+              <a href="/unit-04-probability/deviation-markov-and-chebyshev-bounds/">32. Deviation: Markov &amp; Chebyshev Bounds</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/sampling-and-confidence/">33. Sampling &amp; Confidence</a>
+              <a href="/unit-04-probability/sampling-and-confidence/">33. Sampling &amp; Confidence</a>
             </p>
             <p>
-              <a href="/bite-sized-math-for-cs/unit-04-probability/random-walks-and-pagerank/">34. Random Walks &amp; PageRank</a>
+              <a href="/unit-04-probability/random-walks-and-pagerank/">34. Random Walks &amp; PageRank</a>
             </p>
         </div>
       </details>
@@ -198,7 +198,7 @@ We need to specify the <em>sign</em> of that particular size of intersection, if
 <p>To write it down precisely:</p>
 <section><eqn><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mstyle scriptlevel="0" displaystyle="true"><munder><mo>∑</mo><mrow><mi mathvariant="normal">∅</mi><mo mathvariant="normal">≠</mo><mi>S</mi><mo>⊆</mo><mo stretchy="false">{</mo><mn>1</mn><mo separator="true">,</mo><mtext> </mtext><mn>2</mn><mo separator="true">,</mo><mtext> </mtext><mi mathvariant="normal">.</mi><mi mathvariant="normal">.</mi><mi mathvariant="normal">.</mi><mo separator="true">,</mo><mtext> </mtext><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><mo stretchy="false">(</mo><mo>−</mo><mn>1</mn><msup><mo stretchy="false">)</mo><mrow><mi mathvariant="normal">∣</mi><mi>S</mi><mi mathvariant="normal">∣</mi><mo>+</mo><mn>1</mn></mrow></msup><mtext> </mtext><mrow><mo fence="false" stretchy="true" minsize="1.8em" maxsize="1.8em">∣</mo><munder><mo>⋂</mo><mrow><mi>i</mi><mo>∈</mo><mi>S</mi></mrow></munder><msub><mi>A</mi><mi>i</mi></msub><mo fence="false" stretchy="true" minsize="1.8em" maxsize="1.8em">∣</mo></mrow></mstyle></mrow><annotation encoding="application/x-tex">\displaystyle\sum_{\varnothing \neq S \subseteq \{1, \ 2, \ ..., \ n\}} (-1)^{|S| + 1} \ {\Big| \bigcap_{i \in S} A_i \Big|}</annotation></semantics></math></span></eqn></section>
       <hr class="ending">
-          <ul class="links-nextprev"><li><a href="/bite-sized-math-for-cs/unit-03-counting/repetitions-and-binomial-theorem/">previous</a></li><li><a href="/bite-sized-math-for-cs/unit-04-probability/intro-to-discrete-probability/">next</a></li>
+          <ul class="links-nextprev"><li><a href="/unit-03-counting/repetitions-and-binomial-theorem/">previous</a></li><li><a href="/unit-04-probability/intro-to-discrete-probability/">next</a></li>
           </ul> 
       </div>
     </main>
